@@ -208,6 +208,7 @@ Chronological list of authors
   - Meet Brijwani
   - Vishal Parmar
   - Moritz Schaeffler
+  - Ahmed Salah Ghoneim
 
 External code
 -------------
